[fix] link in a button [add] align-content: flex-start; in main

--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@ body {
   color: white;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
-
 li {
   list-style: none;
+}
+
+button {
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  color: white;
+  background-color: transparent;
 }
 
 img {
@@ -61,6 +65,8 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
+  
 }
 
 .row-bottom {
@@ -70,15 +76,15 @@ main {
 }
 
 /* ROW-TOP */
-.row-top a {
-  background-color: #484848;
+.row-top button {
+  background-color: #6a6c70;
   padding: 5px;
   margin: 0 5px;
   border-radius: 5px;
   align-self: center;
 }
 
-.row-top a i {
+.row-top button i {
   margin-right: 5px;
   padding-top: 4px;
 }
@@ -106,8 +112,8 @@ main {
 
 /* ROW-BOTTOM */
 section {
-  width: calc(100 / 3);
-  padding: 10px 0;
+  display: flex;
+  align-items: center;
 }
 
 .box {
@@ -115,10 +121,11 @@ section {
   padding: 10px;
 }
 
-ul.strumenti li {
+ul.strumenti li button {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-right: 10px;
 }
 
@@ -136,21 +143,13 @@ li span {
   color: #40ac04;
 }
 
-section:last-child {
+section:last-child button {
   background-color: #4a4a4a;
   color: red;
-  width: 150px;
-  /* padding: 10px; */
+  text-align: center;
+  padding: 0 30px;
+  height: 100%;
+  font-size: 1.2rem;
 }
 
-section:last-child a {
-  color: red;
-  position: relative;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50% , -50%);
-}
-  
-
-  
  
